--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Desenvolvido por <a href="Maurício Júnior Pedro Manico" target="_blank">ejr. technology</a> &copy; 2023
+            <p>Desenvolvido por <a href="Maurício Júnior Pedro Manico" target="_blank">Ejr.Tecnology</a> &copy; 2023
             </p>
           </div>
         </div>
