alterações no index

--- a/index.html
+++ b/index.html
@@ -105,18 +105,25 @@
               <h3 class="main-title">Sobre a GD Conceição Lda</h3>
             </div>
             <div class="col-md-6">
-              <img class="img-fluid" src="assets/photo.06.jpeg" alt="Posto de luz sendo reparado na rua" width="" height="" margin-right="100">
+              <img class="img-fluid" src="assets/photo.06.jpeg" alt="Posto de luz sendo reparado na rua" width=""
+                height="" margin-right="100">
             </div>
             <div class="col-md-6">
-              <h3 class="about-title">GD CONCEIÇÃO LDA - Construção Civil & Obras Públicas</h3>Atuamos no mercado de <i>Construção Civil e Energia,</i> em todo território nacional.</p>
-              <p>O conhecimento profundo do mercado foi um factor fundamental para o desenrolar dos acontecimentos, prova disso são os nossos muitos projectos em que intervém atualmente.</p>
-              <p>Nossa equipe é constituída por pessoas 100% capacitadas, dedicadas a desenvolver um trabalho rigoroso e de qualidade com soluções à medida de cada cliente.</p>
+              <h3 class="about-title">GD CONCEIÇÃO LDA - Construção Civil & Obras Públicas</h3>Atuamos no mercado de
+              <i>Construção Civil e Energia,</i> em todo território nacional.</p>
+              <p>O conhecimento profundo do mercado foi um factor fundamental para o desenrolar dos acontecimentos,
+                prova disso são os nossos muitos projectos em que intervém atualmente.</p>
+              <p>Nossa equipe é constituída por pessoas 100% capacitadas, dedicadas a desenvolver um trabalho rigoroso e
+                de qualidade com soluções à medida de cada cliente.</p>
               <p>Desenvolvemos e executamos projectos nas seguintes áreas:</p>
               <ul id="about-list">
                 <li><i class="fas fa-check"></i> Instalações Elétricas, Construção Civil e Acabamentos.</li>
-                <li><i class="fas fa-check"></i> Transformação de Energia (Postos de Seccionamento e Transformação PT).</li>
-                <li><i class="fas fa-check"></i> Redes de Distribuição de Energia (Redes de Baixa e Média Tensão, BT/MT).</li>
-                <li><i class="fas fa-check"></i> Redes de IP - Iluminação Pública - Execução de Projecto e Consultoria Técnica.</li>
+                <li><i class="fas fa-check"></i> Transformação de Energia (Postos de Seccionamento e Transformação PT).
+                </li>
+                <li><i class="fas fa-check"></i> Redes de Distribuição de Energia (Redes de Baixa e Média Tensão,
+                  BT/MT).</li>
+                <li><i class="fas fa-check"></i> Redes de IP - Iluminação Pública - Execução de Projecto e Consultoria
+                  Técnica.</li>
                 <li><i class="fas fa-check"></i> Desenvolvimento com metodologia ágil.</li>
               </ul>
             </div>
@@ -125,14 +132,19 @@
             </div>
             <div class="col-md-6">
               <h3 class="about-title">Posicionamento</h3>
-              <br/>
-              <br/>
-              <br/>
-              <p> <b>VISÃO</b><p>Nos assumimos como uma referência nacional do <q>saber</q> e <q>fazer</q>, tornando-nos um parceiro estratégico, para relações de longo prazo com os nossos clientes.</p>
-              <p> <b>MISSÃO</b><p>Procuramos sempre de uma forma sólida e inconformada, as melhores e mais inovadoras soluções de engenharia, que garantam aos nossos clientes a criação de valor acrescentado para os seus negócios.</p>
-              <p> <b>VALORES</b><p>Serviço, Respeito, Compromisso, Profissionalismo, Rigor, Disponibilidade, Espírito de Equipa.</p>
+              <br />
+              <br />
+              <br />
+              <p> <b>VISÃO</b>
+              <p>Nos assumimos como uma referência nacional do <q>saber</q> e <q>fazer</q>, tornando-nos um parceiro
+                estratégico, para relações de longo prazo com os nossos clientes.</p>
+              <p> <b>MISSÃO</b>
+              <p>Procuramos sempre de uma forma sólida e inconformada, as melhores e mais inovadoras soluções de
+                engenharia, que garantam aos nossos clientes a criação de valor acrescentado para os seus negócios.</p>
+              <p> <b>VALORES</b>
+              <p>Serviço, Respeito, Compromisso, Profissionalismo, Rigor, Disponibilidade, Espírito de Equipa.</p>
             </div>
-            
+
           </div>
         </div>
       </div>
@@ -151,7 +163,7 @@
             <div class="col-md-4 service-box">
               <i class="fas fa-shopping-cart"></i>
               <h4>E-commerces</h4>
-              <p>Temos uma plataforma própria de e-commerce que se adapta a qualquer regra de negócio (B2C e B2B).</p>
+              <p>Temos uma plataforma própria de e-commerce que se adapta a qualquer regra de negócio.</p>
             </div>
             <div class="col-md-4 service-box">
               <i class="fas fa-paint-brush"></i>
@@ -167,12 +179,12 @@
             <div class="col-md-4 service-box">
               <i class="fas fa-hands-helping"></i>
               <h4>Suporte 24h/24h</h4>
-              <p>Você sempre terá a nossa equipe disponível para suporte, em diferentes plataformas. (chat, email,
-                skype)</p>
+              <p>Você sempre terá a nossa equipe disponível para suporte, em diferentes plataformas. (ligação, email,
+                whatsapp)</p>
             </div>
             <div class="col-md-4 service-box">
               <i class="fas fa-server"></i>
-              <h4>Experiência em servidores</h4>
+              <h4>Experiência em Servidores</h4>
               <p>Garantimos uptime e também rápido tempo de resposta do seu site para o seu cliente.</p>
             </div>
           </div>
@@ -184,7 +196,7 @@
           <div class="row">
             <div class="col-md-3 col-xs-6 circle-box">
               <div id="circleA"></div>
-              <p>Projetos entregues</p>
+              <p>Projectos Entregues</p>
             </div>
             <div class="col-md-3 col-xs-6 circle-box">
               <div id="circleB"></div>
@@ -196,7 +208,7 @@
             </div>
             <div class="col-md-3 col-xs-6 circle-box">
               <div id="circleD"></div>
-              <p>Mata-bicho</p>
+              <p>Mata-Bicho</p>
             </div>
           </div>
         </div>
@@ -220,7 +232,7 @@
             </div>
             <div class="col-md-3">
               <div class="card">
-                <img src="assets/Vanda.jpg" class="card-img-top" alt="Imagem de perfil 2" width="275px" height="275px">
+                <img src="img/Vanda15.jpeg" class="card-img-top" alt="Imagem de perfil 2" width="275px" height="275px">
                 <div class="card-body">
                   <h5 class="card-title">Vanda Da Conceição</h5>
                   <p class="card-text">Agente de Manifestos e Transporte Logísticos</p>
@@ -257,33 +269,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="assets/bg-8.jpg" class="card-img-top" alt="Imagem de perfil 6">
-                <div class="card-body">
-                  <h5 class="card-title">Nome Completo</h5>
-                  <p class="card-text">Cargo - Profissão</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="assets/bg-8.jpg" class="card-img-top" alt="Imagem de perfil 7">
-                <div class="card-body">
-                  <h5 class="card-title">Nome Completo</h5>
-                  <p class="card-text">Cargo - Profissão</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="assets/bg-8.jpg" class="card-img-top" alt="Imagem de perfil 8">
-                <div class="card-body">
-                  <h5 class="card-title">Nome Completo</h5>
-                  <p class="card-text">Cargo - Profissão</p>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -294,11 +279,13 @@
             <div class="col-md-6 apply-box" id="company-img"></div>
             <div class="col-md-6 apply-box" id="pattern-img">
               <h4>Gosta de desafios?</h4>
-              <p>Temos várias posições abertas, entre elas: Software Engineer, UI/UX Designer, Project Manager e mais.
+              <p>Temos várias posições abertas, entre elas: Postos de trasnformação, Electrificação Distribuição de
+                Energia, Iluminação Pública, Transportes e Comércio de Material.
+              </p>
+              <p>Aqui você terá a chance de trabalhar com as melhores tecnologias e com profissionais mais do que
+                capacitados.
               </p>
               <p>Clique no botão abaixo e confira os benefícios e as posições em aberto.</p>
-              <p>Aqui você terá a chance de trabalhar com as melhores tecnologias e os profissionais mais capacitados.
-              </p>
               <a href="#" class="main-btn" id="apply-btn">Saiba Mais</a>
             </div>
           </div>
@@ -309,7 +296,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h3 class="main-title">Conheça nossos projetos</h3>
+              <h3 class="main-title">Conheça nossos projectos</h3>
             </div>
             <div class="col-md-12" id="filter-btn-box">
               <button class="main-btn filter-btn active" id="all-btn">Todos</button>
@@ -318,22 +305,22 @@
               <button class="main-btn filter-btn" id="seo-btn">SEO</button>
             </div>
             <div class="col-md-4 project-box dev">
-              <img src="img/proj1.jpg" class="img-fluid" alt="Projeto 1">
+              <img src="img/proj1.jpg" class="img-fluid" alt="Projecto 1">
             </div>
             <div class="col-md-4 project-box dsg">
-              <img src="img/proj2.jpg" class="img-fluid" alt="Projeto 2">
+              <img src="img/proj2.jpg" class="img-fluid" alt="Projecto 2">
             </div>
             <div class="col-md-4 project-box seo">
-              <img src="img/proj3.jpg" class="img-fluid" alt="Projeto 3">
+              <img src="img/proj3.jpg" class="img-fluid" alt="Projecto 3">
             </div>
             <div class="col-md-4 project-box dev">
-              <img src="img/proj4.jpg" class="img-fluid" alt="Projeto 4">
+              <img src="img/proj4.jpg" class="img-fluid" alt="Projecto 4">
             </div>
             <div class="col-md-4 project-box dsg">
-              <img src="img/proj5.jpg" class="img-fluid" alt="Projeto 5">
+              <img src="img/proj5.jpg" class="img-fluid" alt="Projecto 5">
             </div>
             <div class="col-md-4 project-box seo">
-              <img src="img/proj6.jpg" class="img-fluid" alt="Projeto 6">
+              <img src="img/proj6.jpg" class="img-fluid" alt="Projecsto 6">
             </div>
           </div>
         </div>
@@ -344,9 +331,9 @@
           <div class="col-md-12">
             <h3 class="main-title">Fique por dentro das novidades</h3>
           </div>
-          <p>Assine nossa lista de e-mails, e receba nossos conteúdos sobre desenvolvimento de software</p>
+          <p>Assine nossa lista de e-mails, e receba nossos conteúdos sobre Construção Civil e Obras Públicas</p>
           <form action="">
-            <input type="text" class="form-control" id="email-input" name="email" placeholder="Seu melhor e-mail">
+            <input type="text" class="form-control" id="email-input" name="email" placeholder="Seu e-mail">
             <input type="submit" id="news-btn" value="Inscrever">
           </form>
         </div>
@@ -372,17 +359,18 @@
           </div>
           <div class="col-md-4 contact-box">
             <i class="fas fa-phone"></i>
-            <p><span class="contact-tile">Ligue para:</span> (+55) 41 99976-7091</p>
-            <p><span class="contact-tile">Horários:</span> 08h:00 - 19h:00</p>
+            <p><span class="contact-tile">Ligue para:</span> (+244) 925 577 421</p>
+            <p><span class="contact-tile">Horários:</span> 08h:30 - 17h:30</p>
           </div>
           <div class="col-md-4 contact-box">
             <i class="fas fa-envelope"></i>
-            <p><span class="contact-tile">Envie um email:</span> contato@hdcagency.com.br</p>
+            <p><span class="contact-tile">Envie um email:</span> mauriciojunior88@outlook.pt</p>
           </div>
           <div class="col-md-4 contact-box">
             <i class="fas fa-map-marker-alt"></i>
-            <p><span class="contact-tile">Venha tomar um chá de cachinde e conhecer mais nossa empresa:</span> Rua
-              principal da cerâmica - Casa S/N</p>
+            <p><span class="contact-tile">Venha tomar um chá e conhecer mais nossa empresa:</span> Bairro dos
+              Imbondeiros - Rua
+              principal da cerâmica - Casa S/N Cacuaco, Luanda - Angola</p>
           </div>
           <div class="col-md-6" id="msg-box">
             <p>Ou nos deixa uma mensagem:</p>
@@ -402,14 +390,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <p>Desenvolvido por <a href="Maurício Júnior Pedro Manico" target="_blank">Ejr.Tecnology</a> &copy; 2023
+            <p>Desenvolvido por <a href="Maurício Júnior Pedro Manico" target="_blank">ejr. technology</a> &copy; 2023
             </p>
           </div>
         </div>
       </div>
     </div>
   </footer>
-  <!-- Scripts do projeto -->
+  <!-- Scripts do projecto -->
   <script src="js/scripts.js"></script>
 </body>
 
