correção termo connosco

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="img/banner1.png" class="d-block w-100" alt="Construção Civil e Obras Publicas">
             <div class="carousel-caption d-md-block">
               <h2>Construção Civil & Obras Públicas</h5>
-                <p>Conte conosco, temos mais de 3 lojas no portfólio.</p>
+                <p>Conte connosco, temos mais de 3 lojas no portfólio.</p>
                 <a href="#" class="main-btn">Ver portfólio</a>
             </div>
           </div>
@@ -85,7 +85,7 @@
             <div class="carousel-caption d-md-block">
               <h2>Estás em busca de energia em sua vida?</h5>
                 <p>A GD Conceição Lda tem engenheiros altamente qualificados para resolver todos os seus problemas.</p>
-                <a href="#" class="main-btn">Fale conosco</a>
+                <a href="#" class="main-btn">Fale connosco</a>
             </div>
           </div>
         </div>
@@ -273,7 +273,7 @@
           </div>
         </div>
       </div>
-      <!-- Trabalhe conosco -->
+      <!-- Trabalhe connosco -->
       <div id="apply-area">
         <div class="container-fluid">
           <div class="row">
@@ -356,7 +356,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h3 class="main-title">Entre em contacto conosco</h3>
+            <h3 class="main-title">Entre em contacto connosco</h3>
           </div>
           <div class="col-md-4 contact-box">
             <i class="fas fa-phone"></i>
