correção logo web

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                   height="275px">
                 <div class="card-body">
                   <h5 class="card-title">Maurício Manico</h5>
-                  <p class="card-text">Contabilista - Analista e Desenvolvedor Web</p>
+                  <p class="card-text">Programador - Analista e Desenvolvedor de Sistemas Web</p>
                 </div>
               </div>
             </div>
