correção nome projectos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-item nav-link" id="about-menu" href="#">Agência</a>
             <a class="nav-item nav-link" id="services-menu" href="#">Serviços</a>
             <a class="nav-item nav-link" id="team-menu" href="#">Equipe</a>
-            <a class="nav-item nav-link" id="portfolio-menu" href="#">Projetos</a>
+            <a class="nav-item nav-link" id="portfolio-menu" href="#">Projectos</a>
             <a class="nav-item nav-link" id="contact-menu" href="#">Contacto</a>
           </div>
         </div>
@@ -266,7 +266,7 @@
                   height="275px">
                 <div class="card-body">
                   <h5 class="card-title">Maurício Manico</h5>
-                  <p class="card-text">Programador - Analista e Desenvolvedor de Sistemas Web</p>
+                  <p class="card-text">Programador Web - Analista e Desenvolvedor de Sistemas</p>
                 </div>
               </div>
             </div>
