--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
               <h3 class="main-title">Sobre a GD Conceição Lda</h3>
             </div>
             <div class="col-md-6">
-              <img class="img-fluid" src="assets/photo.06.jpeg" alt="Posto de luz sendo reparado na rua" width=""
-                height="" margin-right="100">
+              <img class="img-fluid" src="assets/photo.06.jpeg" alt="Posto de luz sendo reparado na rua" width="" height="" margin-right="100">
             </div>
             <div class="col-md-6">
               <h3 class="about-title">GD CONCEIÇÃO LDA - Construção Civil & Obras Públicas</h3>Atuamos no mercado de
